*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -36,14 +36,14 @@
         type a path or click <strong>Browse</strong> to select a location for the project. Click&nbsp;<strong><strong>Next</strong></strong>. The Java Settings Page opens.
       </li>
       <li>
-        On the <strong>Source</strong> tab, select the <strong>Use source folders contained in the project</strong> radio button to use project subfolders as source containers.
+        On the <strong>Source</strong> tab, click the&nbsp;<strong><strong>Add Folder</strong></strong> button.
       </li>
       <li>
-        Optionally, click the&nbsp;<strong><strong>Create New Folder</strong></strong> button to create new source folder. You can also create new source folders at any time
+        Click the&nbsp;<strong><strong>Create New Folder</strong></strong> button to create new source folder. You can also create new source folders at any time
         later.
       </li>
       <li>
-        Optionally, replace the default name in the&nbsp;<strong><strong>Build output folder</strong></strong> field to use a different name for the output folder.
+        Optionally, replace the default name in the&nbsp;<strong><strong>Default output folder</strong></strong> field to use a different name for the output folder.
       </li>
       <li>
         On the <strong>Projects</strong> tab, select the required projects to be on the build path for this project.
