--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-215.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-215.htm
@@ -25,7 +25,7 @@
         In the&nbsp;<strong><strong>Project name</strong></strong> field, type a name for your new Java project and click&nbsp;<strong><strong>Next</strong></strong>.
       </li>
       <li>
-        On the <strong>Source</strong> tab, click the&nbsp;<strong><strong>Add New Folder</strong></strong> button.
+        On the <strong>Source</strong> tab, click the&nbsp;<strong><strong>Add Folder</strong></strong> button.
       </li>
       <li>
         Click the&nbsp;<strong><strong>Create New Folder</strong></strong> button to create a new source folder.
