*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -31,15 +31,9 @@
         Define the source entries for the build path on the <strong>Source</strong> page: 
         <ul>
           <li>
-            Click the <strong>Use source folders contained in the project</strong> radio button to use folders instead of the project itself to contain
-            source containers.<br>
-             Click the <strong>Create New Folder</strong> or <strong>Add Existing Folder</strong> buttons to add source folders to the Java
-            build path.<br>
-             The <strong>Remove</strong> button removes the selected folder(s) from the build path, <strong>Edit</strong> lets you modify the selected entry.
-          </li>
-          <li>
-            For simple projects, click the <strong>Use the project as source folder</strong> radio button to use the project itself as the folder for source
-            code. This adds an entry for the project itself to the Java build path.
+             Click the <strong>Add Folder</strong> button to add source folders to the Java build path.<br>
+             The <strong>Remove</strong> button removes the selected folder(s) from the build path.<br>
+             <strong>Edit</strong> lets you modify the selected entry.
           </li>
         </ul>
       </li>
