*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
@@ -29,17 +29,15 @@
         Click the <strong>Libraries</strong> tab.
       </li>
       <li>
-        Click the <strong>Advanced...</strong> button.
+        Click the <strong>Add Class Folder</strong> button.
       </li>
       <li>
-        In the dialog that appears, select the <strong>Create New Class Folder</strong> and press the <strong>OK</strong> button.
+        In the dialog that appears, select the <strong>Create New Folder</strong> and press the <strong>OK</strong> button.
       </li>
       <li>
         In the resulting dialog, enter the name for the library folder and press the <strong>OK</strong> button.
       </li>
     </ol>
-    To add an existing class folder, select <strong>Add Existing Class Folder</strong> instead of <strong>Create New Class Folder</strong> in the steps outlined above and select
-    the folder in the dialog that appears after you press <strong>OK</strong>. 
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><a href="../concepts/concepts-4.htm"></a>
     </p>
