Fixed minor typographical errors

--- a/bundles/org.eclipse.platform.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.platform.doc.isv/questions/index.html
@@ -5,12 +5,12 @@
    
    <meta name="Author" content="OTI">
    <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-   <title>Platform Questions Index</title>
+   <title>Platform questions index</title>
 </head>
 <body>
 
 <h1>
-Platform Questions Index</h1>
+Platform questions index</h1>
 <h3>Getting started</h3>
 <ul>
   <li><a href="../samples/samples.html">How do I install the examples?</a></li>
@@ -100,7 +100,7 @@ Platform Questions Index</h1>
     widget in SWT?</a></li>
   <li><a href="../guide/swt_graphics.htm">How do I draw my own graphics?</a></li>
 </ul>
-<h2>Installation and Upgrade</h2>
+<h3>Installation and upgrade</h3>
 <ul>
   <li><a href="../guide/product_config.htm">How do I configure my own splash
     screens and product name?</a></li>
