*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -23,7 +23,9 @@
       <li>
         Select
         <strong>Run &gt; Run As &gt; Java Application </strong>in the workbench
-        menu bar.&nbsp;
+        menu bar.&nbsp;<br>
+        or Select
+        <strong>Run As &gt; Java Application </strong>in the <strong>Run</strong> button pull-down.&nbsp;
       </li>
       <li>
         Your program is now launched, and text output is shown in the Console.
@@ -33,9 +35,6 @@
     compilation unit or class file.&nbsp; You will be prompted to select a class
     from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
         found in the project, that class is launched as if you selected it.)</p>
-    <p>You can launch a program from an open editor by using <strong>Run &gt;
-    Run As &gt; Java Application </strong>in the editor's popup
-    menu.&nbsp;&nbsp;</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-6.htm">Java views</a><br>
