--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
@@ -24,7 +24,9 @@
         In the Package Explorer, select the Java compilation unit or class file you want to launch.
       </li>
       <li>
-        Select <strong>Run &gt; Debug As &gt; Java Application</strong>.&nbsp;&nbsp;
+        Select <strong>Run &gt; Debug As &gt; Java Application</strong>.&nbsp;<br>
+        or Select
+        <strong>Debug As &gt; Java Application </strong>in the <strong>Debug</strong> button pull-down.&nbsp;
       </li>
       <li>
         Your program is now launched and the launched process appears in the Debug view.&nbsp;
@@ -33,13 +35,11 @@
     <p>If you want your program to stop in the <em>main</em>  method so that you
     can step through its complete execution, create a <strong> Java Application</strong>
     launch configuration and check the <strong>Stop in main </strong>checkbox on
-    the <strong>Main </strong>page.&nbsp;</p>
+    the <strong>Main </strong>tab.&nbsp;</p>
     <p>You can also debug a Java program by selecting a project instead of the
     compilation unit or class file.&nbsp; You will be prompted to select a class
     from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
         found in the project, that class is launched as if you selected it.)</p>
-    <p>You can debug a program from an open editor by using <strong>Run &gt; Debug As &gt; Java Application
-    </strong>in the editor's popup menu.</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-6.htm">Java views</a><br>
