--- a/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
@@ -35,7 +35,7 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 			<ul>
 				<li>Remove unused, unresolvable or non-visible import</li>
 				<li>Invoke 'Organize import' on problems in imports</li>
-				</ul>
+			</ul>
 			</td>
 		</tr>
 		<tr>
@@ -46,9 +46,8 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 				<li>Change visibility for types that are accessed but not visible</li>
 				<li>Rename to a similar type for references to types that can not be resolved</li>
 				<li>Add import statement for types that can not be resolved but	exist in the project</li>
-				<li>Add import statement for ambiguous type references (two import-on-demands for the same type)</li>
+				<li>Add explicit import statement for ambiguous type references (two import-on-demands for the same type)</li>
 				<li>If the type name is not matching with the compilation unit name either rename the type or rename the compilation unit</li>
-				<li>Rename compilation unit name if not matching with the compilation unit name</li>
 				<li>Remove unused private types</li>
 			</ul>
 			</td>
@@ -62,8 +61,8 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 				<li>Change method with constructor name to constructor (remove return type)</li>
 				<li>Change visibility for constructors that are accessed but not visible</li>
 				<li>Remove unused private constructor</li>
-				<li>Create constructor when implicit super call is undefined or not visible or contains an uncaught exception</li>
-				<li>Change type modifier to abstract or add unimplemented method</li>
+				<li>Create constructor when super call of the implicit default constructor is undefined, not visible or throws an exception</li>
+				<li>If type contains unimplemented methods, change type modifier to 'abstract' or add the method to implement</li>
 			</ul>
 			</td>
 		</tr>
@@ -76,13 +75,13 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 				<li>Reorder or remove arguments for method references that mismatch parameters</li>
 				<li>Correct access (visibility, static) of referenced methods</li>
 				<li>Remove unused private methods</li>
-				<li>Correct return type for method that have a missing return type or where the return type does not match the return statement</li>
+				<li>Correct return type for methods that have a missing return type or where the return type does not match the return statement</li>
 				<li>Add return statement if missing</li>
-				<li>For non-abstract method with no body change to abstract or add body</li>
-				<li>For an abstract method in a non-abstract type change method to non-abstract or make type abstract</li>
-				<li>For an abstract/native method with body change to non-abstract/non-native or remove body</li>
+				<li>For non-abstract methods with no body change to 'abstract' or add body</li>
+				<li>For an abstract method in a non-abstract type remove abstract modifier of the method or make type abstract</li>
+				<li>For an abstract/native method with body remove the abstract or native modifier or remove body</li>
 				<li>Change method access to 'static' if method is invoked inside a constructor invocation (super, this)</li>
-				<li>Change method access to default to avoid emulated method access</li>
+				<li>Change method access to default access to avoid emulated method access</li>
 			</ul>
 			</td>
 		</tr>
@@ -90,15 +89,15 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 			<td valign="top" align="right"><b>Fields and variables</b></td>
 			<td valign="top" align="left">
 			<ul>
-				<li>Correct access (visibility, not static) of referenced fields</li>
-				<li>Create new  fields, parameters or local variable for references to  variables that can not be resolved</li>
+				<li>Correct access (visibility, static) of referenced fields</li>
+				<li>Create new  fields, parameters or local variables for references to  variables that can not be resolved</li>
 				<li>Rename to a  variable with similar name for references that can not be resolved</li>
 				<li>Remove unused private fields</li>
 				<li>Correct non-static access of static fields</li>
-				<li>Add 'final' modifier to accessed local variables in outer types</li>
-				<li>Change field access to default to avoid emulated method access</li>
+				<li>Add 'final' modifier to  local variables accessed in outer types</li>
+				<li>Change field access to default access to avoid emulated method access</li>
 				<li>Change local variable type to fix a type mismatch</li>
-				<li>Initialize a variable</li>
+				<li>Initialize a variable that has not been initialized</li>
 			</ul>
 			</td>
 		</tr>
@@ -128,18 +127,16 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 
 <p>Quick Assist are proposals available even there is no error: There is no light bulb shown so the user has to know the available assists.</p>
 <table border="0" cellpadding="10" cellspacing="0" width="700">
-
 	<tbody>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Quick Assists</b></td>
 			<td width="80%" valign="top" align="left">
 			<ul>
-				<li>Replace catch clause with throws</li>
+				<li>Replace catch clause with throws declaration on the parent method</li>
 				<li>Transform an expression statement to an assignment to a new local or new field</li>
 				<li>Remove surrounding 'if', 'for', 'while', 'do' statement</li>
 				<li>Remove surrounding try block with a single catch or finally block</li>
-				<li>Remove surrounding anonymous class</li>
-				<li>Remove surrounding block or parenthesis</li>
+				<li>Remove surrounding anonymous class,  block or parenthesis</li>
 				<li>Local rename rename of a type, method or variable in a linked 'template' mode</li>
 				<li>Surround selected lines with templates (''if', 'while'..)</li>
 			</ul>
@@ -148,12 +145,11 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 	</tbody>
 </table>
 <p>
-<img src="../images/ngrelc.gif" alt="Related concepts" border="0"
-	height="27" width="159"><br>
-<a href="../concepts/concepts-7.htm">Java editor</a></p><p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-     <a href="../reference/ref-2.htm">JDT actions</a><a href="../reference/ref-152.htm"></a><br>
-    </p>
+	<img src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+	<a href="../concepts/concepts-7.htm">Java editor</a></p><p><img src="../images/ngrelr.gif" alt="Related reference" border="0"><br>
+    <a href="../reference/ref-2.htm">JDT actions</a><a href="../reference/ref-152.htm"></a><br>
+</p>
+<p><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a></p>
 
-    <p><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a></p>
-  </body>
+</body>
 </html>
