updated for new UI

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -28,7 +28,7 @@
 			type, the list is filtered to display only types that match the current expression.
 		</li>
 		<li>
-			In the <strong>Matching Types</strong> list, select a type. When there is more than one definition of a type, then select a package in
+			In the <strong>Matching types</strong> list, select a type. When there is more than one definition of a type, then select a package in
 			the <strong>Qualifier</strong> list.
 		</li>
 		<li>
