--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
@@ -18,7 +18,7 @@
     </p>
     <ol>
 		<li>
-			Select <strong>Navigate</strong> &gt; <strong>Go To</strong> &gt; <strong>Package</strong> from the menu bar. The Go To Package dialog opens.
+			Select <strong>Navigate</strong> &gt; <strong>Go To</strong> &gt; <strong>Package</strong> from the menu bar. The Go to Package dialog opens.
 		</li>
 		<li>
 			Type a package name in the <strong>Choose a package</strong> field to narrow the list of available packages, using wildcards as needed. As you type,
