--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -39,11 +39,11 @@
     <p>
     </p>
     <p>
-      To copy Java elements you need to copy them to clipboard and paste in the desired new location:
+      To copy Java elements you need to copy them to the clipboard and paste them in the desired new location:
     </p>
     <ol>
 		<li>
-			From a Java view, select the Java elements you want to copy to clipboard and do one of the following:
+			From a Java view, select the Java elements you want to copy to the clipboard and do one of the following:
 		    <ul>
 			      <li>
 			        Press <strong>Ctrl+C</strong>
@@ -60,13 +60,13 @@
 			Now, to paste the elements, select the desired destination and do one of the following:
 		    <ul>
 		      <li>
-		        Press<strong>Ctrl+V</strong>
+		        Press <strong>Ctrl+V</strong>
 		      </li>
 		      <li>
 		        From the menu bar, select <strong>Edit &gt; Paste</strong>
 		      </li>
 		      <li>
-		        From the view's pop-up menu, select<strong>Copy</strong>
+		        From the view's pop-up menu, select <strong>Copy</strong>
 		      </li>
 		    </ul>
 		</li>
