--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
@@ -20,11 +20,11 @@
         The selection does not cover statements or an expression from a method body.
       </li>
       <li>
-        The selection does not cover a whole set of statement or an expression.
+        The selection does not cover a whole set of statements or an expression.
       </li>
     </ul>
     <p>
-      You can use the <strong>Edit</strong> &gt; <strong>Expand Selection to</strong> actions to expand an selection to a valid expression or set of statements.
+      You can use the <strong>Edit</strong> &gt; <strong>Expand Selection To</strong> actions to expand an selection to a valid expression or set of statements.
     </p>
     <p>
       On the problems pages, you can press F1 to link to a detailed description of errors.
