--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -17,15 +17,15 @@
       You can rename the parameters of a method by renaming the parameter's declaration as well as all references to the parameters inside the method body.
     </p>
     <p>
-      Use the <strong>Modify Parameters</strong> command to rename one or more parameters of a method as well as all references to these parameters.
+      Use the <strong>Change Method Signature</strong> command to rename one or more parameters of a method as well as all references to these parameters.
     </p>
     <ul>
       <li>
         Select the method in a Java view (the Outline view, for example)
       </li>
       <li>
-        From the method's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Modify Parameters</strong> or, from the menu bar, select
-        <strong>Refactor</strong> &gt; <strong>Modify Parameters</strong>.<br>
+        From the method's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Change Method Signature</strong> or, from the menu bar, select
+        <strong>Refactor</strong> &gt; <strong>Change Method Signature</strong>.<br>
         <strong>Note:</strong> these menu entries will no be active if the method has no parameters.
       </li>
       <li>
