--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -21,11 +21,13 @@
         In the Hierarchy or Outline view, select a type or one of its members.
       </li>
       <li>
-        From the selected element's pop-up menu, select <strong>Show in Package Explorer</strong>. If the Package Explorer is not already open, then it opens in the
+        From the menu bar, select <strong>Navigate</strong> &gt; <strong>Show In</strong> &gt; <strong>Package Explorer</strong>.
+        If the Package Explorer is not already open, then it opens in the
         current perspective. The workbench navigates to the selected element.
       </li>
       <li>
-        From the Java editor's pop-up menu, select Show in Package Explorer (the currently edited compilation unit will be revealed)
+        From the Java editor's pop-up menu, select 
+        <strong>Show in Package Explorer</strong> (the currently edited compilation unit will be revealed)
       </li>
     </ol>
     <p>
