--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -18,14 +18,14 @@
     </p>
     <ol>
 		<li>
-			From the menu bar, select <strong>Navigate &gt; Go To &gt; Type.</strong> The Go To Type dialog opens.
+			From the menu bar, select <strong>Navigate &gt; Go To &gt; Type.</strong> The Go to Type dialog opens.
 		</li>
 		<li>
 			In the <strong>Choose a type</strong> field, begin typing an expression to narrow the list of available types, using wildcards as needed. As you
       		type, the list is filtered to display only types that match the current expression.
       	</li>
 		<li>
-			In the <strong>Matching Types</strong> list, select a type. When there is more than one definition of a type, then select a package in
+			In the <strong>Matching types</strong> list, select a type. When there is more than one definition of a type, then select a package in
       		the <strong>Qualifier</strong> list.
       	</li>
 		<li>
