*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -41,11 +41,9 @@
   <tr>
     <td width="30%" valign="top" align="right"><strong>Interesting new API</strong></td>
     <td width="70%" valign="top" align="left">
-      <strong><code>Display.addFilter(int, Listener):</code></strong> Allows a client to listen for
-        any occurrence of a given event throughout SWT.</p>
-      <p><strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
+      <strong><code>Display.getDismissalAlignment():</code></strong> Returns the ordering that should
         be used when positioning the default dismissal button for a dialog.  This allows dialogs to define
-        button orderings so as to match platform policy.</p>
+        button orderings so as to match platform policy.
       <p align="center"><img border="0" src="images/swt-buttonOrder.gif" width="317" height="145"></p>
       <p><strong><code>Font(Device, FontData[]):</code></strong> Creates a font from an array of
         <code>FontData</code> objects.  This is important since any application that wishes to run properly
