new refactoring tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -28,25 +28,35 @@
        <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
        <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a>
     </p>
-    <p>
-      <a href="tasks-85.htm">Copying and moving Java elements</a><br>
-       <a href="tasks-87.htm">Extracting a method</a><br>
-       <a href="tasks-90.htm">Renaming a package</a><br>
-       <a href="tasks-92.htm">Renaming a compilation unit</a><br>
-       <a href="tasks-94.htm">Renaming a class or interface</a><br>
-       <a href="tasks-96.htm">Renaming a method</a><br>
-       <a href="tasks-169.htm">Renaming a field</a><br>
-       <a href="tasks-204.htm">Renaming a local variable</a><br>
-       <a href="tasks-98.htm">Renaming method parameters</a><br>
-       <a href="tasks-159.htm">Reordering method parameters</a><br>
-       <a href="tasks-159.htm">Extracting a local variable</a><br>
-       <a href="tasks-161.htm">Inlining a local variable</a><br>
-       <a href="tasks-162.htm">Self encapsulating a field</a><br>
-       <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
-       <a href="tasks-165.htm">Pulling members up to superclass</a><br>
-       <a href="tasks-167.htm">Moving static members between types</a>
-    </p>
-    <p>
+    
+<p> <a href="tasks-85.htm">Copying and moving Java elements</a><br>
+  <a href="tasks-87.htm">Extracting a method</a><br>
+  <a href="tasks-159.htm">Extracting a local variable</a><br>
+  <a href="tasks-209.htm">Extracting a constant</a><br>
+  <a href="tasks-90.htm">Renaming a package</a><br>
+  <a href="tasks-92.htm">Renaming a compilation unit</a><br>
+  <a href="tasks-94.htm">Renaming a class or interface</a><br>
+  <a href="tasks-96.htm">Renaming a method</a><br>
+  <a href="tasks-169.htm">Renaming a field</a><br>
+  <a href="tasks-204.htm">Renaming a local variable</a><br>
+  <a href="tasks-98.htm">Renaming method parameters</a><br>
+  <a href="tasks-159.htm">Changing method signature</a><br>
+  <a href="tasks-161.htm">Inlining a local variable</a><br>
+  <a href="tasks-208.htm">Inlining a method</a><br>
+  <a href="tasks-207.htm">Inlining a constant</a><br>
+  <a href="tasks-162.htm">Self encapsulating a field</a><br>
+  <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
+  <a href="tasks-165.htm">Pulling members up to superclass</a><br>
+  <a href="tasks-220.htm">Pushing members down to subclasses</br><br>
+  <a href="tasks-167.htm">Moving static members between types</a><br>
+  <a href="tasks-210.htm">Moving an instance method to a component</a><br>
+  <a href="tasks-211.htm">Converting a local variable to a field</a><br>
+  <a href="tasks-216.htm">Converting an anonynous inner class to a nested class</a><br>
+  <a href="tasks-217.htm">Converting a nested type to a top level type</a><br>
+  <a href="tasks-218.htm">Extracting an interface from a type</a><br>
+  <a href="tasks-219.htm">Replacing references to a type with references to one of its subtypes</a><br>
+ </p>
+<p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
     </p>
     <p>
