*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
@@ -29,8 +29,8 @@
   <li>Ensure that the destination is loaded into your workspace. For example, 
     if you wish to merge your changes into HEAD, make sure the project is shared 
     with HEAD in your workspace. To do this, select the project and choose <b>Replace 
-    With &gt; Branch or Version</b> from the context menu. Then select the branch 
-    to replace with.</li>
+    With &gt; Another Branch or Version</b> from the context menu. Then select 
+    the branch to replace with.</li>
   <li>Select the project and choose <b>Team &gt; Merge</b>.</li>
   <li>Enter the start point of the merge. This is the version from which the branch 
     was created. Click <b>Next</b>.</li>
@@ -52,8 +52,8 @@
 <table width="100%" border="0">
   <tr> 
     <td width="20%"><strong>Update from Repository</strong></td>
-    <td width="80%">This action is enabled on resources that are incomming additions. 
-      Running this action will bring the additions into the workspace.</td>
+    <td width="80%">This action is enabled on files that contain incomming changes. 
+      Running this action will bring the changes into the file in the workspace.</td>
   </tr>
   <tr> 
     <td><strong>Override and Update</strong></td>
@@ -65,7 +65,7 @@
     <td><strong>Merge changes Into Local Copy</strong></td>
     <td>This action is enabled on files with conflicting changes. Running this 
       action will perform the equivalent of the &quot;cvs update&quot; command. 
-      This will merge the local coontents with the remote contents using the base 
+      This will merge the local contents with the remote contents using the base 
       as the ancestor. Changes are merged regardless of the conflicting state 
       of the files and can result in conflict markers (e.g. lines that can't be 
       automatically merged) in the local file.</td>
