--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -14,8 +14,7 @@
 <P>When committing resources, often there are resources that you do not want to 
   add to version control. One way you can do this is by using the CVS &quot;ignore&quot; 
   facility, which reads the contents of the file <i>.cvsignore</i> to determine 
-  what to ignore. This facility is used most often to ignore directories.
-</P>
+  what to ignore.</P>
 
 <P>The <i>.cvsignore</i> file can be added to any directory of a project. Many 
   existing CVS projects already contain several of these files. This text file 
