--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
@@ -18,14 +18,15 @@
   <li>Select a resource in the Navigator view.</li>
   <li>From the resource's pop-up menu, select one of the following menu items: 
     <UL>
-      <LI><b>Replace With &gt; Latest From Repository</b> - replace the Workbench 
-        resource with the latest resources currently committed to the branch that 
-        the local project is shared with.</LI>
-      <LI><b>Replace With &gt; Branch or Version</b> - replace the Workbench resource 
-        with a specific version or branch that you select in the repository. When 
-        you select this option, another window opens, so that you can browse through 
-        the branch and version tags in the repository and select the one that 
-        you want.</LI>
+      <LI><b>Replace With &gt; Latest From &lt;Branch Name&gt;</b> or <strong>&lt;Version&gt;</strong> 
+        - replace the Workbench resource with the latest resources currently committed 
+        to the branch that the local project is shared with or if the local project 
+        is checked out as a version then replace with the same version.</LI>
+      <LI><b>Replace With &gt; Another Branch or Version</b> - replace the Workbench 
+        resource with a specific version or branch that you select in the repository. 
+        When you select this option, another window opens, so that you can browse 
+        through the branch and version tags in the repository and select the one 
+        that you want.</LI>
       <LI><b>Replace With &gt; Revision</b> - (available only on a file) replace 
         the Workbench file with another revision of the file. When you select 
         this option, a dialog opens to allow you to select a revision from the 
