--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-105a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-105a.htm
@@ -13,14 +13,22 @@
 <P>The CVS plugin allows you to delete files from the CVS repository. If you delete a managed file and commit the deletion to the server, the file is deleted from the current branch or version. Although the file has been deleted from the current branch, the file and it's previous revisions are actually still on the server. The CVS plugin provides a tool to help restore a file to your workspace that has previously been deleted from the CVS repository:</p>
 
 <ol>
-<li>Select a folder managed by CVS and from the context menu select <strong>Team 
-  &gt; Restore from Repository</strong>. 
-  <li>The repository will be searched for deleted files and the list will be shown in a dialog. <li>At this point you have the option of restoring any previous 
-  revision of a deleted file. 
-  <li>After restoring the file if you want to actually restore the file to the current branch you have to add then commit 
-  the file back into the repository. If the filename does not change, revision 
-  history will be maintained for the restored file.
-  </ol>
+  <li>Select a folder managed by CVS and from the context menu select <strong>Team 
+    &gt; Restore from Repository</strong>. 
+  <li>The repository will be searched for deleted files and the list will be shown 
+    in a dialog. 
+  <li>Select a file in the left most pane to display the revisions of the file 
+    that are available in the repository.
+  <li>Select a revision in the right-most pane to view the contents in the bottom 
+    text pane.
+  <li>Check the revision that you would like to restore. 
+  <li>Click <strong>Finish</strong> once you have checked off a revision for each 
+    file you wish to restore.
+  <li>After restoring the file if you want to actually restore the file to the 
+    current branch you have to add then commit the file back into the repository. 
+    If the filename does not change, revision history will be maintained for the 
+    restored file. 
+</ol>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a>
