--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
@@ -13,12 +13,11 @@
 
 <P CLASS="Para">It is possible to use a CVS project checked out using another 
   CVS tool into Eclipse. A common concern for those migrating to Eclipse is that 
-  they already <br>
-  + have their CVS project checked out on their local machine. You <em>don't</em> 
-  have to check out the contents again to create a project in Eclipse. Although 
-  the project already contains the CVS sharing information in the CVS folders, 
-  it still needs to be shared within Eclipse in order to enable the CVS Team menu 
-  operations.</P>
+  they already have their CVS project checked out on their local machine. You 
+  <em>don't</em> have to check out the contents again to create a project in Eclipse. 
+  Although the project already contains the CVS sharing information in the CVS 
+  folders, it still needs to be shared within Eclipse in order to enable the CVS 
+  Team menu operations.</P>
 
 <P>To share an CVS project that was already checked out:: </P>
 
@@ -31,8 +30,8 @@
     provider available, the first page will be skipped and next page will be displayed 
     automatically.</li>
   <li>The next page displays the sharing information stored in the CVS folder 
-    of the project. Click Finish to share the project and enable the CVS Team 
-    menu operations.</li>
+    of the project. Click <strong>Finish</strong> to share the project and enable 
+    the CVS Team menu operations.</li>
 </ol>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
