--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
@@ -1,1 +1,45 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Refreshing the CVS Repositories view</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Refreshing the CVS Repositories view</H1><P> There are two ways to refresh the CVS Repositories view in order to see the current connection status of all repositories:</p><ul>  <li>Click the <b>Refresh View</b> button on the view's toolbar&nbsp;</li>  <li>Press F5 on the keyboard</lI></ul><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27c.htm">CVS Repositories</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-92.htm">Creating a CVS repository location</a><br><a href="tasks-94.htm">Discarding a CVS repository location</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-32.htm">CVS Repositories view</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Refreshing the CVS Repositories view</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Refreshing the CVS Repositories view</H1>
+
+<P> There are two ways to refresh the CVS Repositories view in order to see the 
+current connection status of all repositories:
+</p>
+
+<ul>
+  <li>Click the <b>Refresh View</b> button on the view's toolbar&nbsp;</li>
+  <li>Press F5 on the keyboard</lI>
+</ul>
+
+<p><em>Note</em>: Refreshing the CVS Repositories view may change the resources 
+  displayed by the view but does not change the branch and version tags known 
+  to the view. Refreshing the tags is discussed in <a href="tasks-110.htm">Discovering 
+  branch and version tags</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+  <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+  <a href="../concepts/concepts-27c.htm">CVS Repositories</a> </p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+  <a href="tasks-92.htm">Creating a CVS repository location</a><br>
+  <a href="tasks-94.htm">Discarding a CVS repository location</a> <br>
+  <a href="tasks-110.htm">Discovering branch and version tags</a></p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
+<a href="../reference/ref-47.htm">CVS</a><br>
+<a href="../reference/ref-32.htm">CVS Repositories view</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
