--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96b.htm
@@ -11,7 +11,7 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Checking out a folder into an existing project</H1>
 
-<P>To check out a folder from a CVS repository into an exsiting project in the 
+<P>To check out a folder from a CVS repository into an existing project in the 
   Workbench: </P>
 
 <ol>
