--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -40,22 +40,13 @@
 
 <p>When adding a folder or project, the action will recursively descend into subfolders, 
   adding those files it finds to version control, provided the files have not 
-  been explicitly ignored.
-</p>
+  been explicitly ignored. </p>
 
-<p><em>Tip:</em> When you create a new file in a CVS project, a task is created 
-  to remind you of the fact that that file is neither ignored nor under version 
-  control. The &quot;Quick Fix&quot; menu for the task will provide options for 
-  resolving it, such as either adding it to version control or adding it to the 
-  list of ignored resources.
-</p>
-
-<p><em>Tip:</em> When committing files from the Synchronization view, if the selection 
-  either directly or recursively contains files which have not been added to version 
-  control, you'll be prompted whether or not you want them added. 
-  This is a convenience function to help ensure that you do not miss committing 
-  new resources which were unintentionally never added.
-</p>
+<p><em>Tip:</em> When committing files, if the selection either directly or recursively 
+  contains files which have not been added to version control, you will be prompted 
+  whether or not you want them added. This is a convenience function to help ensure 
+  that you do not miss committing new resources which were unintentionally never 
+  added. </p>
 
 <h2><i>How may I ignore thee, let me count the ways</i></h2>
 
@@ -73,9 +64,9 @@
     version management by Team CVS. Some builders, such as the Java builder, mark 
     all of its build output (e.g. .class files) as derived.</li>
   <li>CVS supports the creation of a special <i>.cvsignore</i> file whose contents 
-    describe which files to ignore for version management. This is used most often to ignore directories. 
-    The .cvsignore file only applies the pattern to resources in the <i> same</i> 
-    directory as the .cvsignore file itself.</li>
+    describe which files or folders to ignore for version management. The .cvsignore 
+    file only applies the pattern to resources in the <i> same</i> directory as 
+    the .cvsignore file itself.</li>
 </ol>
 
 <P><em>Tip</em>: Once a resource is under version control, it cannot easily be 
