--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -28,9 +28,9 @@ label decorations that indicate the CVS state of the resource.
   <li> Click <b>OK</b>.</li>
 </ol>
 
-<p><em>Note:</em> In some cases, the decorations may not appear immediately due to the fact that, 
-they are expensive to compute.  In those cases, they are calculated in the background.
-</p>
+<p><em>Note:</em> In some cases, the decorations may not appear immediately due 
+  to the fact that they are expensive to compute. In those cases, they are calculated 
+  in the background. </p>
 
 <p>To configure the CVS decorations:
 </p>
@@ -41,7 +41,8 @@ they are expensive to compute.  In those cases, they are calculated in the backg
   <li>In the dialog, select the<b> Team &gt; CVS &gt; Label Decorations</b> preference 
     page. This page allows the configuration of how decorations appear on CVS 
     projects, folders and files.</li>
-  <li>To configure the text label decorations: 
+  <li>To configure the text label decorations click the <strong>Text</strong> 
+    tab and then: 
     <ol type="a">
       <li>Pick the resource type (file, folder, project) for which you want to 
         change the decoration.</li>
@@ -53,19 +54,27 @@ they are expensive to compute.  In those cases, they are calculated in the backg
         where you placed the cursor. The string <i>{added_flag}</i> will be added 
         to the decoration string which will decorate newly added resources using 
         the added resource label (which can be set in the <i>Label Decoration 
-        for Added</i> field).</li>	</ol></li>
+        for Added</i> field).</li>
+    </ol>
+  </li>
   <li>Repeat the above for any other decorations to be added.</li>
   <li>Decorations can be removed by deleting the decoration variable name (i.e.<i> 
     {added_flag}</i>) from the decoration string. In a similar manner, spacing 
     can be added.</li>
-  <li>To configure icon decorations, simply enable/disable the icon checkboxes 
-    at the bottom of the page.</li>
+  <li>To configure icon decorations, click the <strong>Icon</strong> tab simply 
+    enable/disable the icon checkboxes.</li>
   <li>Click <b>OK</b> or <b>Apply</b> for the new decorations to take effect.</li>
 </ol>
 
+<p><em>Note</em>: Under the <strong>General</strong> tab is an option to disable 
+  the deep dirty decoration of folders. This will make decorator determination 
+  more efficient but will make it harder to find dirty resources in the Navigator 
+  and other views. Under the <strong>Synchronize View</strong> tab, the Synchronize 
+  view can be configured to show the synchronization state of a resource as part 
+  of the text label displayed in the Structure Compare pane.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+  <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+  <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a> 
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
