--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -48,7 +48,9 @@
   project will be checked out read-only. This tells the CVS client which files 
   are being edited by you and which aren't (writeable files are being edited). 
   If you've already checked out the project before you turned on this option, 
-  should must check it out again so that the files will get marked read-only.</p>
+  you can either check it out again or enable the &quot;Use Watch/Edit for this 
+  project&quot; option on the project's CVS properties page. Either of these operations 
+  will make the files in the project read-only.</p>
 <h3>Editing</h3>
 <p class="Para"></p>
 <p>Although typical CVS clients require you to perform an explicit edit, Team 
